# sawyer_moveit

./: CHANGELOG.rst  README.md  README.rst  sawyer_clicksmart_initialize.py  sawyer_clicksmart_moveit_launch.sh  sawyer_moveit.rosinstall
sawyer_ikfast_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml
sawyer_moveit/: CMakeLists.txt  package.xml
sawyer_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sawyer_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinect_sensor.yaml  kinematics.yaml  ompl_planning.yaml  sawyer.srdf  sawyer_controllers.yaml  xtion_sensor.yaml
sawyer_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sawyer_moveit.launch  sawyer_moveit_controller_manager.launch.xml  sawyer_moveit_sensor_manager.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
sawyer_moveit_config/srdf/: controller_box.srdf.xacro  rethink_clicksmart_gripper.srdf.xacro  rethink_electric_gripper.srdf.xacro  sawyer.srdf.xacro  sawyer_base.srdf.xacro
