<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>sawyer_ikfast_plugin</name>
  <version>5.0.4</version>
  <description>The sawyer_ikfast_plugin package</description>


  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://www.rethinkrobotics.com/sdk</url>
  <url type="repository">
    https://github.com/RethinkRobotics/sawyer_moveit
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/sawyer_moveit/issues
  </url>
  <author>Ian McMahon</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <moveit_core plugin="${prefix}/sawyer_moveit_ikfast_plugin_description.xml"/>
  </export>

  <build_depend>moveit_core</build_depend>
  <run_depend>moveit_core</run_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>pluginlib</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>tf_conversions</build_depend>
  <run_depend>tf_conversions</run_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>
  <build_depend>eigen</build_depend>
</package>
