<?xml version="1.0"?>
<package>
  <name>sawyer_moveit</name>
  <version>5.3.0</version>
  <description>
    sawyer_moveit metapackage containing all of the packages
    to operate the Sawyer robot in the MoveIt framework.
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://sdk.rethinkrobotics.com/intera/</url>
  <url type="repository">
    https://github.com/RethinkRobotics/sawyer_moveit
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/sawyer_moveit/issues
  </url>
  <author>Ian McMahon</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>sawyer_moveit_config</run_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
